@@ -39,6 +39,11 @@ if test "x$enable_socket" = xyes; then
 	AC_DEFINE(USE_SOCKET, [1], [Socket support is enabled])
 fi
 
+PKG_PROG_PKG_CONFIG
+if test -n "$PKG_CONFIG"; then
+	PKG_CHECK_MODULES([LOCKDEV], [lockdev], AC_DEFINE([HAVE_LOCKDEV],[1],[Define if you have lockdev]),[:])
+fi
+
 AC_ARG_ENABLE([lock-dir],
 	AS_HELP_STRING([--enable-lock-dir=DIR],
 	               [Set com line lock directory (def: try common locations)]),
